# bash-operator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: cli_args.rs  error.rs  main.rs  operator.rs  utils.rs
