[package]
name = "bash-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93", features = ["backtrace"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
kube = { version = "0.96.0", features = ["runtime"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tempfile = "3.14.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "process", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
debug = false
strip = true
